ATLAS-2035: Document todos